Applies second patch with some fixes and formats

--- a/module/support/logging/DataPlayback/CMakeLists.txt
+++ b/module/support/logging/DataPlayback/CMakeLists.txt
@@ -7,8 +7,8 @@ set(source_file "${CMAKE_CURRENT_BINARY_DIR}/src/register_players.cpp")
 add_custom_command(
   OUTPUT "${source_file}"
   COMMAND ${PYTHON_EXECUTABLE} ARGS "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
-          "${PROJECT_BINARY_DIR}/shared" "${source_file}"
-  DEPENDS ${NUCLEAR_MESSAGE_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
+          "${PROJECT_BINARY_DIR}/nuclear/message/python" "${source_file}"
+  DEPENDS nuclear::message "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
   COMMENT "Generating DataPlayback system for current messages"
 )
 
