Set hostname in the configuration files

--- a/module/tools/SystemConfiguration/data/config/nugus1/SystemConfiguration.yaml
+++ b/module/tools/SystemConfiguration/data/config/nugus1/SystemConfiguration.yaml
@@ -1,8 +1,5 @@
+hostname: nugus1
+
 # Systemd units that should be enabled
 systemd:
-  - systemd-networkd.service
-  - systemd-resolved.service
-  - systemd-timesyncd.service
-  - sshd.service
-  - wpa_supplicant.service
   - wpa_supplicant@wlan0
