Start upgrade of visual mesh module

--- a/module/vision/VisualMesh/CMakeLists.txt
+++ b/module/vision/VisualMesh/CMakeLists.txt
@@ -1,5 +1,4 @@
-# Add the VisualMesh project to be built
-add_subdirectory(VisualMesh)
+find_package(VisualMesh REQUIRED)
 
 # Build our NUClear module
-nuclear_module(INCLUDES} LIBRARIES libvisualmesh)
+nuclear_module(INCLUDES ${VisualMesh_INCLUDE_DIRS} LIBRARIES ${VisualMesh_LIBRARIES})
