--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -267,7 +267,8 @@ RUN pip install \
     stringcase \
     Pillow \
     protobuf==3.11.2 \
-    tqdm
+    tqdm \
+    clang==11
 
 # Install tools needed for building individual modules as well as development tools
 RUN install-package \
