Fix eslint on Windows (NUbots/NUsight2#332)

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:watch": "yarn test --watch",
     "coverage": "yarn test --coverage",
     "coverage:ci": "yarn test:ci --coverage",
-    "eslint": "eslint 'src/**/*.ts{,x}' --cache",
-    "eslint:fix": "eslint 'src/**/*.ts{,x}' --cache --fix",
+    "eslint": "eslint \"src/**/*.ts{,x}\" --cache",
+    "eslint:fix": "eslint \"src/**/*.ts{,x}\" --cache --fix",
     "tscheck": "tsc --project tsconfig.test.json",
     "tscheck:watch": "yarn tsc --project tsconfig.test.json --watch",
     "protobuf": "node build_scripts/generate_messages.js",
