--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -1,5 +1,5 @@
 # Continuous Integration tests
-name: Horus CI
+name: NUbots CI
 
 # Controls when the action will run.
 on:
@@ -57,8 +57,8 @@ jobs:
         run: echo "::set-output name=image::nubots/nubots:${{ hashFiles('docker/**') }}"
 
   # Build the codebase as well as run clang-tidy
-  build_horus:
-    name: "Build and test Horus"
+  build_nubots:
+    name: "Build and test NUbots"
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
