--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           pull: true
-          tags: "nubots/nubots:${{ hashFiles('docker/**') }}"
+          tags: "nubots/nubots:${{ github.ref }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
@@ -54,7 +54,7 @@ jobs:
 
       - id: image_output
         name: Output the created image
-        run: echo "::set-output name=image::nubots/nubots:${{ hashFiles('docker/**') }}"
+        run: echo "::set-output name=image::nubots/nubots:${{ github.ref }}"
 
   # Build the codebase as well as run clang-tidy
   build_nubots:
