--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -48,6 +48,8 @@ jobs:
           context: docker
           build-args: |
             platform=generic
+            user_uid=0
+            user_gid=0
           push: true
           cache-from: type=registry,ref=nubots/nubots:generic
           cache-to: type=inline
