Root user on python formatting

--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -154,6 +154,7 @@ jobs:
     # Run on the container we just built
     container:
       image: "${{ needs.build_docker.outputs.image }}"
+      options: --user 0:0
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
