--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,11 @@
             "-I${workspaceFolder}/nuclear/message/proto"
         ]
     },
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "black",    
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/tools",
+        "${workspaceFolder}/nuclear"
+    ],
     "yaml.format.printWidth": 120,
     "files.associations": {
         "*.role": "cmake"
