--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,21 +22,7 @@
     ],
     "yaml.format.printWidth": 120,
     "files.associations": {
-        "*.m": "matlab",
-        "*.role": "cmake",
-        "*.tcc": "cpp",
-        "optional": "cpp",
-        "istream": "cpp",
-        "ostream": "cpp",
-        "ratio": "cpp",
-        "system_error": "cpp",
-        "array": "cpp",
-        "functional": "cpp",
-        "regex": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "stdexcept": "cpp"
+        "*.role": "cmake"
     },
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
