--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -3,9 +3,9 @@ file(GLOB_RECURSE test_src "*/**.cpp" "*/**.hpp")
 
 if(test_src)
   add_executable(TestShared "${CMAKE_SOURCE_DIR}/${NUCLEAR_SHARED_DIR}/tests/test.cpp" ${test_src})
-  target_link_libraries(TestShared nuclear::message nuclear::utility)
+  target_link_libraries(TestShared PRIVATE nuclear::message nuclear::utility)
 
-  set_property(TARGET TestShared PROPERTY FOLDER "shared/tests")
+  set_target_properties(TestShared PROPERTIES FOLDER "shared/tests")
 
   # Add the test
   add_test(
